--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff6666</color>
-    <color name="colorPrimaryDark">#ff5050</color>
-    <color name="colorAccent">#669999</color>
+    <color name="colorPrimary">#660033</color>
+    <color name="colorPrimaryDark">#4d0026</color>
+    <color name="colorAccent">#ff0066</color>
 
-    <color name="red">#cc0000</color>
+    <color name="red">#ff3300</color>
     <color name="green">#009933</color>
-    <color name="yellow">#ffff66</color>
-    <color name="blue">#3366ff</color>
+    <color name="yellow">#ffff00</color>
+    <color name="blue">#0099ff</color>
 
-    <color name="redBright">#ff3300</color>
-    <color name="greenBright">#33cc33</color>
-    <color name="yellowBright">#ffff00</color>
-    <color name="blueBright">#0099ff</color>
+    <color name="redBright">#ff9999</color>
+    <color name="greenBright">#00ff00</color>
+    <color name="yellowBright">#ffffcc</color>
+    <color name="blueBright">#ccffff</color>
 
     <color name="grey">#666666</color>
 
